style: scrollbar style fixed

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -26,6 +26,24 @@
 
 body {
   background-color: #f6f3ed;
+  scrollbar-width: thin;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #5e6821;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 2rem;
+  background: #729762;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #658c55;
 }
 
 .navbar {
